--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -111,17 +111,17 @@ jobs:
         $env:path="C:\Program` Files` (x86)\Windows` Kits\10\App` Certification` Kit;$env:path"
         .\build_scripts\build_windows.ps1
 
-    - name: Upload Windows exe's to artifacts
-      uses: actions/upload-artifact@v2.2.2
-      with:
-        name: Windows-Exe
-        path: ${{ github.workspace }}\silicoin-light-gui\Silicoin-win32-x64\
+    # - name: Upload Windows exe's to artifacts
+    #  uses: actions/upload-artifact@v2.2.2
+    #  with:
+    #    name: Windows-Exe
+    #    path: ${{ github.workspace }}\silicoin-light-gui\Silicoin-win32-x64\
 
     - name: Upload Installer to artifacts
       uses: actions/upload-artifact@v2.2.2
       with:
         name: Windows-Installers
-        path: ${{ github.workspace }}\silicoin-light-gui\release-builds\
+        path: ${{ github.workspace }}\silicoin-light-gui\release-builds\*.exe
 
 
     # - name: Install AWS CLI
